# project_csse4011

./: .bashrc  .gitignore  README.md  camera.py
GUI/: csse4011_project_python.bat  gesture.py  gesture_recogniser.py  gui.py  main.py  mqtt.py  readme.md  thingy52.py
Gest_Rec/: test.py
M5Core2/: Disp  Disp.ino  README.md  Tracking_Display.ino  loop.py  move_bot.py  mqtt_testing.py
Nathans_embedded/mycode/: .gitignore
Nathans_embedded/mycode/apps/dk_board/: CMakeLists.txt  README.md  prj.conf
Nathans_embedded/mycode/apps/mpu6050_test/: prj.conf
Nathans_embedded/mycode/mylib/bluetooth/: bluetooth.c
Nathans_embedded/mycode/mylib/hci/: hci.c
Nathans_embedded/mycode/mylib/protocolBuffer/: hci.pb.c  hci_pb2.py
Turtlebotadvanced/turtlebot3_ws/: README.md
Turtlebotadvanced/turtlebot3_ws/install/: local_setup.sh  setup.sh
Turtlebotadvanced/turtlebot3_ws/src/gesture_cont/: setup.cfg  setup.py
Turtlebotadvanced/turtlebot3_ws/src/install/: setup.bash  setup.ps1
nrf_thingy/mycode/apps/Thingy:52/: CMakeLists.txt
nrf_thingy/mycode/apps/Thingy:52/src/: main.c
nrf_thingy/mycode/apps/Thingy_52/: prj.conf
nrf_thingy/mycode/apps/gui/: gui.py  test.py
nrf_thingy/mycode/apps/project/: CMakeLists.txt  README.md  prj.conf
nrf_thingy/mycode/mylib/bluetooth/: bluetooth.h
nrf_thingy/mycode/mylib/gcu/: commands.c  commands.h
nrf_thingy/mycode/mylib/hci/: hci.c  hci.h
nrf_thingy/mycode/mylib/protocolBuffer/: hci.pb.h  hci.proto
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/my_robot_controller/: package.xml  setup.py
the_turt/: package.xml  setup.py
the_turt/gesture_control/: feedback.md  gesture_control.py
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/install/: local_setup.sh  setup.sh  setup.zsh
turtlebot3_ws/src/log/: latest_build
(+35 files in other folders)
